# oncosplice

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: bulk.md  classifier.md  engines.md  index.md  quickstart.md
docs/api/: engine.md  engines.md  results.md  scoring.md
examples/: CREBBP_synergistic.ipynb  KRAS_rescue.ipynb  quickstart.py
oncosplice/: __init__.py  _geney_compat.py  engine.py  results.py  variants.py  viz.py
oncosplice/engines/: __init__.py  _pangolin_arch.py  base.py  ensemble.py  openspliceai.py  pangolin.py  spliceai_keras.py  spliceai_pytorch.py  spliceformer.py
oncosplice/engines/_vendor/: __init__.py
oncosplice/engines/_vendor/spliceformer/: __init__.py  model.py  weight_init.py
oncosplice/scoring/: __init__.py  epistasis.py  fingerprint.py  oncosplice.py  site_query.py  splicing.py
oncosplice/weights/: __init__.py  __main__.py  manifest.json
scripts/: upload_weights.py
tests/: test_engines_selfcontained.py  test_scoring.py  test_spliceai_equivalence.py  test_variants.py
