[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncosplice"
version = "3.2.0"
description = "Sequence-level pipeline for splicing-epistasis analysis of single, double, and N-variant constructs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nicolas Lynn" }]
license = { text = "MIT" }
keywords = [
  "splicing", "epistasis", "oncosplice",
  "spliceai", "openspliceai", "pangolin", "spliceformer",
  "cancer-genomics",
]

dependencies = [
  # Minimums chosen for numpy 2.x compatibility:
  # pandas≥2.2.2, matplotlib≥3.9, biopython≥1.84 all support numpy 2.
  "numpy>=1.23",
  "pandas>=2.2.2",
  "matplotlib>=3.9",
  "biopython>=1.84",
  "seqmat>=1.3",
]

# Per-engine optional extras — install only the splice-site backend you need.
# Note: spliceai_pytorch is the recommended path for the original SpliceAI
# weights (numerically identical to Keras, ~2.5× faster, no TF dependency).
# The spliceai_keras extra is kept ONLY as the reference implementation for
# verification of the Keras→PyTorch translation.
[project.optional-dependencies]
# ── Splice-site engine backends (pick the one you want, or `all`) ────────────
openspliceai     = ["torch>=2.0", "openspliceai"]
spliceai_pytorch = ["torch>=2.0"]                   # uses bundled translated weights
pangolin         = ["torch>=2.0"]                   # install Pangolin from github separately
spliceformer     = ["torch>=2.0", "transformers", "einops"]
spliceai_keras   = ["tensorflow>=2.8", "spliceai"]  # reference / verification only
all              = [                                # all 4 production engines
  "torch>=2.0", "openspliceai", "transformers", "einops",
]

# ── Protein-library / Oncosplice protein-divergence score (optional) ───────
# Required for `analyze_pair(protein=True)`, alternative-isoform enumeration,
# and the original Oncosplice score from Lynn & Tuller 2024. The splicing-
# epistasis classification core does NOT need this.
protein          = ["geney>=2.0"]

dev              = ["pytest>=7", "pytest-cov", "ruff"]

[project.scripts]
oncosplice-download-weights = "oncosplice.weights:_cli"

[project.urls]
homepage = "https://github.com/nicolasalynn/oncosplice"

[tool.setuptools]
packages = ["oncosplice", "oncosplice.scoring", "oncosplice.engines", "oncosplice.weights"]

[tool.setuptools.package-data]
oncosplice = ["py.typed"]
"oncosplice.weights" = ["manifest.json"]
